css/style.css
@import url('dlmenu.css');

html{
    font-size: 100%;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    overflow: auto;
}

body{
    margin: 0px;
    font-size: 20px;
    font-family: 'Montserrat', sans-serif;
    line-height: 20px;
    -webkit-font-smoothing: antialiased;
    overflow: auto;
    background: #78c2a9;
}

p{
    font-family: 'Montserrat', sans-serif;
    font-size: 20px;
    padding-top: 0.25px;
    line-height: 2px;
    color: white;
    text-transform: uppercase;
}
h7 {
    font-family: 'Montserrat', sans-serif;
    font-size: 20px;
    padding-top: 0.25px;
    line-height: 2px;
    color: white;
    text-transform: uppercase;
}
h8 {
}
h9 {
    margin-left: 50px;
    margin-right: 50px;
}
h10 {
    text-transform: uppercase;
    color: white;
    font-size: 35px;
    margin-left: 50px;
    display: inline-block;
    float: left;
}
span {
    text-transform: uppercase;
    color: white;
    font-size: 35px;
    margin-left: 100px;
}
h11 {
    font-family: 'Muli', sans-serif;
    color: white;
}
leftpew {
    width:500px;
    float:left;
    padding:10px;
}
rightpew {
    width:700px;
    float:left;
    padding:10px;
}
#jellybean {
    border-style: dashed;
    border-width: 5px;
    border-color: black;
    margin-left: 100px;
}
#socialmedia {
    top:10px;
    right: 10px;
    position: fixed;
}
#top {
    height: 10px;
}
#page1,
#page2,
#page3 {
	height: 800px;
}

#page1 {
    background: #78c2a9;
}

#page2 {
    background: #134E5E;
}
#page3 {
    background: #928DAB;
    font-family: 'Montserrat', sans-serif;
}
/*#82FA58*/
/*#header{
    position: fixed;
    top: 0px;
    left: 0px;
    font-family: 'Montserrat', sans-serif;
    letter-spacing: 0.2em;
    text-transform: uppercase;
    text-align: center;
    width: 100%;
    line-height: 100px;
    font-size: 15px;
    z-index: 1000;
    /*background-color: #fafafa;
}*/
#code {
/*  margin-top:150px;*/
  border-radius: 5px;
  width:550px;
  margin-left: 30px;
    margin-top: 30px;
  padding-top:15px;
  font-size:30px;
  background: #ccc;
  height: 100px;
  font-family: 'Monaco', 'Courier New';
  text-align: left;
  font-size:13px;
  color: #fafafa;
}

#shell {
  width:510px;
  padding: 20px;
  height: 240px;
  margin:0 auto;
  background: #383737;
}

#contact {
    font-family: 'Montserrat', sans-serif;
    margin: 0 auto;
    margin-left: 0;
    text-align: center;
}
/*383737*/

.laptop {
  width: 846px;
  height: 471px;
  background: #E8E859;
  border: 43px solid #202020;
  border-radius: 36px 36px 0 0;
  position: relative;
    top:30px;
    left: 0;
    right: 0;
    margin: auto;
}

.laptop:before {
 top: -21px;
}

.laptop > div {
  position: absolute; 
}

.laptop > .content {
  width: 190px;
  height: 118px;
  left: 0;
  margin-left: 0;
}
.btm {
  width: 1065px;
  height: 25px;
  bottom: -68px;
  left: 50%;
  margin-left: -532px;
  border-radius: 0 0 72px 72px;
  background: #D8D8CE;
  z-index: 1;
}

.btm:before {
  content: "";
  position: absolute;
  width: 151px;
  height: 10px;
  left: 50%; 
  top: 0;
  margin-left: -84px;
  border-radius: 0 0 18px 18px;
  background: #959581;
}

